CSS: Fix overflow-x mobile.

--- a/assets/stylesheets/layout/_pages.scss
+++ b/assets/stylesheets/layout/_pages.scss
@@ -1,3 +1,8 @@
+#page {
+	width: 100%;
+	overflow: hidden;
+}
+
 .view-inner-container {
 	max-width: 900px;
 	margin: 0 auto;
